# CHIP8-emulator

./: .gitignore  CMakeLists.txt  README.md  conftest.py
src/: main.c
src/chip8/: .instruction.c.swp  chip8.c  chip8.h  instruction.c
src/disassembler/: disassembler.c  disassembler.h
src/display/: display.c  display.h
src/input/: input.c  input.h
tests/unit_tests/chip8/: chip8_unit.c  instructions_unit.c
